package com.campus.expense;

public class ExpenseException extends Exception {
    public ExpenseException(String message) {
        super(message);
    }
}
